maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: value switch is not a member of Int
	j switch {
          ^